--- a/SongsForWorship/SongsForWorship/Views/SongTVCell.xib
+++ b/SongsForWorship/SongsForWorship/Views/SongTVCell.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -47,34 +46,19 @@
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fe9-W6-Tjc">
-                        <rect key="frame" x="286" y="19" width="18" height="16"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="16.199999999999999" id="BVS-99-dGs"/>
-                            <constraint firstAttribute="width" constant="18" id="No3-Uo-gQg"/>
-                        </constraints>
-                        <state key="normal" image="heart_filled"/>
-                        <connections>
-                            <action selector="favoriteButtonTapped:" destination="2" eventType="touchUpInside" id="JBj-nA-ONT"/>
-                        </connections>
-                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="centerY" secondItem="UyA-p8-X8n" secondAttribute="centerY" id="JA2-Av-j4e"/>
                     <constraint firstAttribute="centerX" secondItem="9" secondAttribute="centerX" constant="-10" id="OVc-Kf-5jh"/>
                     <constraint firstItem="UyA-p8-X8n" firstAttribute="leading" secondItem="zTB-8Z-pgH" secondAttribute="leading" constant="8" id="TDn-68-cHq"/>
                     <constraint firstAttribute="centerY" secondItem="9" secondAttribute="centerY" id="Twu-WQ-8cy"/>
-                    <constraint firstItem="Fe9-W6-Tjc" firstAttribute="centerY" secondItem="zTB-8Z-pgH" secondAttribute="centerY" id="Yq0-va-Ft7"/>
                     <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="9" secondAttribute="bottom" constant="16.5" id="ZeA-jB-b9x"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Fe9-W6-Tjc" secondAttribute="trailing" id="bdw-ou-2C1"/>
                     <constraint firstItem="9" firstAttribute="top" relation="greaterThanOrEqual" secondItem="zTB-8Z-pgH" secondAttribute="top" constant="17" id="g2k-wz-hKl"/>
                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="9" secondAttribute="trailing" id="hx3-8I-TQe"/>
                     <constraint firstItem="9" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="UyA-p8-X8n" secondAttribute="trailing" constant="10" id="yaC-Ls-LRf"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="favoriteButton" destination="Fe9-W6-Tjc" id="9lE-yl-SiY"/>
                 <outlet property="numberLabel" destination="3" id="PpL-bA-pAF"/>
                 <outlet property="referenceLabel" destination="7" id="tLo-8e-QMI"/>
                 <outlet property="titleLabel" destination="9" id="61E-we-t84"/>
@@ -82,7 +66,4 @@
             <point key="canvasLocation" x="139" y="154"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="heart_filled" width="20" height="17.666666030883789"/>
-    </resources>
 </document>
